--- a/home/templates/userside/forgot_password.html
+++ b/home/templates/userside/forgot_password.html
@@ -11,23 +11,18 @@
 {% endif %}
 <div class="wrapper" style="background-image: url('images/bg-registration-form-2.jpg');">
     <div class="inner">
-        <form action="{% url 'login' %}" method="POST">
+        <form action="{% url 'forgot_password' %}" method="POST">
             {% csrf_token %}
-            <h3>Login</h3>
+            <h3>Forgot Password</h3>
            
             <div class="form-wrapper">
-                <label for="">Email</label>
+                <label for=""> Enter your registered Email</label>
                 <input type="text" class="form-control" id="email" name="email">
             </div>
-            <div class="form-wrapper">
-                <label for="">Password</label>
-                <input type="password" class="form-control" id="passw" name="passw">
-            </div>
+          
            
-            <button type="submit">Log In</button>
-           <div class=" col d-flex justify-content-between"> <a href="{% url 'signup' %} " >Create a account</a>
-        <a href="{% url 'forgot_password' %}">Forgot Password?</a>
-           
+            <button type="submit">Send OTP</button>
+          
         </form>
     </div>
 </div>
