--- a/home/templates/userside/reset_password.html
+++ b/home/templates/userside/reset_password.html
@@ -1,14 +1,35 @@
-{% extends 'passwordbase.html' %}
-
-
-{% block password %} 
-
-<h1>Reset Password</h1>
-<form method="post">
-    {% csrf_token %}
-    <label for="password">New Password:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">Submit</button>
-</form>
-
-{% endblock password %}
+{% extends 'base.html' %}
+{% block title %}SignUp page{% endblock title %}
+{% block content %}
+{% if messages %}
+<div class="alert {% if message.tags == 'error' %}alert-danger alert-dismissible fade show{% elif message.tags == 'success' %}alert-success alert-dismissible fade show {% endif %}" role="alert">
+    {% for message in messages%}
+    <strong>{{ message.tags }}</strong> {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  {% endfor %}
+</div>
+{% endif %}
+<div class="wrapper" style="background-image: url('images/bg-registration-form-2.jpg');">
+    <div class="inner">
+        <form action="{% url 'reset_password' %}" method="POST">
+            {% csrf_token %}
+            <h3>RESET PASSWORD</h3>
+            
+            
+                <input type="hidden" class="form-control" id="email" name="email" value="{{email}}">
+           
+            <div class="form-wrapper">
+                <label for="">New Password</label>
+                <input type="password" class="form-control" id="pass1" name="password1">
+            </div>
+            <div class="form-wrapper">
+                <label for="">Confirm Password</label>
+                <input type="password" class="form-control" id="pass2" name="password2">
+            </div>
+           
+            <button type="submit">Reset</button>
+           
+        </form>
+    </div>
+</div
+{% endblock content %}
