--- a/category/templates/product_list.html
+++ b/category/templates/product_list.html
@@ -1,87 +1,214 @@
 {% extends 'dashboard.html' %}
+{% load static %}
+{% block extra_link %}
 
-{% block userlist %}
+       
+       
+     
 
-</div>
-
-<div class="table_data_check">
-    <div class="table_head_sec">
-        {% if messages %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            {% for message in messages%}
-            <strong>SUCCESS:</strong> {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          {% endfor %}
- 
-{% endif %}
-        <h1>Product List</h1></div>
-        <div class="container mt-4">
-            <div class="row">
-                {% for product in products %}
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
                             
-                            <img src="{% if product.product_image.all %}{{ product.product_image.first.image.url }}{% else %}{{ 'path/to/placeholder-image.jpg' }}{% endif %}" class="card-img-top" alt="Product Image" style="height:400px;">
-                            <div class="card-body">
-                                <div class="card-header d-flex justify-content-between">
-                                    <h3 class="card-title font-weight-bold">{{ product.pr_name }}</h3>
-                                    
-                                </div>
-                                <p class="card-text">Category: <span class="font-weight-bold">{{ product.cat_id.name }}</span></p>
-                                <p class="card-text">Brand: <span class="font-weight-bold">{{ product.brand_id.br_name }}</span></p>
-                                <p class="card-text">Subcategory: <span class="font-weight-bold">{{ product.subcat_id.sub_name }}</span></p>
-                                <p class="card-text">Availability: <span class="{% if product.is_available %}text-success{% else %}text-danger{% endif %}">{{ product.is_available|yesno:"Available,Not Available" }}</span></p>
-                            </div>
-                            <div class="mb-4 justify-content-between">
-                                <a href="{% url 'adminapp:update_product' product.id %}" class="btn btn-info btn-sm mr-2">Edit</a>
-                                <a href="{% url 'adminapp:delete_product' product.id %}" class="btn btn-danger btn-sm ml-3" onclick="confirmDelete(event)">Delete</a>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item bg-light">
-                                    <h6 class="font-weight-bold">Variants:</h6>
-                                    <table class="table table-bordered">
-                                        <thead class="thead-light">
-                                            <tr>
-                                                <th class="font-weight-bold">Color</th>
-                                                <th class="font-weight-bold">Size</th>
-                                                <th class="font-weight-bold">Stock</th>
-                                                <th class="font-weight-bold">Price</th>
-                                                <th class="font-weight-bold">Discount</th>
-                                                <th class="font-weight-bold">Status</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for variant in product.product_varient.all %}
-                                                <tr>
-                                                    <td>{{ variant.color.color }}</td>
-                                                    <td>{{ variant.size.size }}</td>
-                                                    <td>{{ variant.stock }}</td>
-                                                    <td>{{ variant.price }}</td>
-                                                    <td>{{ variant.discount }}</td>
-                                                    <td>
-                                                        <span class="{% if variant.is_active %}text-success{% else %}text-danger{% endif %} font-weight-bold">
-                                                            {% if variant.is_active %}Active{% else %}Inactive{% endif %}
-                                                        </span>
-                                                    </td>
-                                                </tr>
-                                            {% endfor %}
-                                        </tbody>
-                                    </table>
-                                </li>
-                            </ul>
-                        </div>
+                       
+
+<!-- Data Table JS
+		============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/jquery.dataTables.min.css' %}">
+
+<!-- responsive CSS
+		============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/responsive.css' %}">
+        
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+        <!-- Google Fonts
+            ============================================ -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
+        <!-- Bootstrap CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/bootstrap.min.css' %}">
+        <!-- font awesome CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/font-awesome.min.css' %}">
+        <!-- owl.carousel CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/owl.theme.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/owl.transitions.css' %}">
+        <!-- meanmenu CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/meanmenu/meanmenu.min.css' %}">
+        <!-- animate CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/animate.css' %}">
+        <!-- normalize CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/normalize.css' %}">
+        <!-- wave CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/wave/waves.min.css' %}">
+        <link rel="stylesheet" href="{% static 'csss/wave/button.css' %}">
+        <!-- mCustomScrollbar CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/scrollbar/jquery.mCustomScrollbar.min.css' %}">
+        <!-- Notika icon CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/notika-custom-icon.css' %}">
+        <!-- Data Table JS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/jquery.dataTables.min.css' %}">
+        <!-- main CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/main.css' %}">
+        <!-- style CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/style.css' %}">
+        <!-- responsive CSS
+            ============================================ -->
+        <link rel="stylesheet" href="{% static 'csss/responsive.css' %}">
+        <!-- modernizr JS
+            ============================================ -->
+        <script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
+{% endblock extra_link %}
+{% block userlist %}
+{% if messages %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    {% for message in messages%}
+    <strong>SUCCESS:</strong> {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  {% endfor %}
+
+{% endif %}
+ <div class="data-table-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="data-table-list">
+                    <div class="basic-tb-hd">
+                        <h2>Order List</h2>
+
                     </div>
-                {% endfor %}
+                    <div class="table-responsive">
+                        <table id="data-table-basic"class="table  table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Product Name</th>
+                                    <th>Image</th>
+
+                                    <th>Category </th>
+                                    <th>Subcategory</th>
+                                    <th> Brand</th>
+                                    
+                                    <th> Edit</th>
+                                    <th>Delete</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for product in products %}
+                                <tr class="product-row" data-product-id="{{ product.id }}">
+                                    <td>{{product.pr_name}}</td>
+                                    <td > <img src="{% if product.product_image.all %}{{ product.product_image.first.image.url }}{% endif %}" class="card-img-top" alt="Product Image" style="width:100px;height:auto"></td>
+                                    <td> {{product.cat_id.name}}</td>
+                                    <td>{{ product.subcat_id.sub_name }}</td>
+                                    <td>{{ product.brand_id.br_name}}</td>
+                                   <td><a href="{% url 'adminapp:update_product' product.id %}" class="btn btn-info btn-sm mr-2">Edit</a></td>
+                                   <td> <a href="{% url 'adminapp:delete_product' product.id %}" class="btn btn-danger btn-sm ml-3" onclick="confirmDelete(event)">Delete</a></td>
+                 
+                                    <td><a href="{% url 'adminapp:product_variant_list' id=product.id %}" class="btn btn-sm btn-primary">View Details</a></td>
+                                   
+                                    {% endfor %}
+                                   
+                                </tr>
+                               
+                            </tbody>
+                           
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-        
     </div>
-    <script>
-        function confirmDelete(event) {
-            var confirmed = confirm('Are you sure you want to delete the Product');
-            if (!confirmed) {
-                event.preventDefault();  // Prevent the default link behavior
-            }
-        } 
-     </script>   
+</div>
+
+<script>
+    function confirmDelete(event) {
+        var confirmed = confirm('Are you sure you want to delete the Product');
+        if (!confirmed) {
+            event.preventDefault();  // Prevent the default link behavior
+        }
+    } 
+ </script>              
+              
+          
+ <!-- jquery
+		============================================ -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+        <script src="{% static 'jss/vendor/jquery-1.12.4.min.js' %}"></script>
+<!-- Data Table area End-->
+<script src="{% static 'jss/data-table/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'jss/data-table/data-table-act.js' %}"></script>
+ 
+         <!--  animation JS
+		============================================ -->
+    <script src="{% static 'jss/animation/animation-active.js' %}"></script>
+        <!-- bootstrap JS
+            ============================================ -->
+        <script src="{% static 'jss/bootstrap.min.js' %}"></script>
+        <!-- wow JS
+            ============================================ -->
+        <script src="{% static 'jss/wow.min.js' %}"></script>
+        <!-- price-slider JS
+            ============================================ -->
+        <script src="{% static 'jss/jquery-price-slider.js' %}"></script>
+        <!-- owl.carousel JS
+            ============================================ -->
+        <script src="{% static 'jss/owl.carousel.min.js' %}"></script>
+        <!-- scrollUp JS
+            ============================================ -->
+        <script src="{% static 'jss/jquery.scrollUp.min.js' %}"></script>
+        <!-- meanmenu JS
+            ============================================ -->
+        <script src="{% static 'jss/meanmenu/jquery.meanmenu.js' %}"></script>
+        <!-- counterup JS
+            ============================================ -->
+        <script src="{% static 'jss/counterup/jquery.counterup.min.js' %}"></script>
+        <script src="jss/counterup/waypoints.min.js' %}"></script>
+        <script src="{% static 'jss/counterup/counterup-active.js' %}"></script>
+        <!-- mCustomScrollbar JS
+            ============================================ -->
+        <script src="{% static 'jss/scrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+        <!-- sparkline JS
+            ============================================ -->
+        <script src="{% static 'jss/sparkline/jquery.sparkline.min.js' %}"></script>
+        <script src="{% static 'jss/sparkline/sparkline-active.js' %}"></script>
+        <!-- flot JS
+            ============================================ -->
+        <script src="{% static 'jss/flot/jquery.flot.js' %}"></script>
+        <script src="{% static 'jss/flot/jquery.flot.resize.js' %}"></script>
+        <script src="{% static 'jss/flot/flot-active.js' %}"></script>
+        <!-- knob JS
+            ============================================ -->
+        <script src="{% static 'jss/knob/jquery.knob.js' %}"></script>
+        <script src="{% static 'jss/knob/jquery.appear.js' %}"></script>
+        <script src="{% static 'jss/knob/knob-active.js' %}"></script>
+        <!--  Chat JS
+            ============================================ -->
+        <script src="{% static 'jss/chat/jquery.chat.js' %}"></script>
+        <!--  todo JS
+            ============================================ -->
+        <script src="{% static 'jss/todo/jquery.todo.js' %}"></script>
+        <!--  wave JS
+            ============================================ -->
+        <script src="{% static 'jss/wave/waves.min.js' %}"></script>
+        <script src="{% static 'jss/wave/wave-active.js' %}"></script>
+        <!-- plugins JS
+            ============================================ -->
+        <script src="{% static 'jss/plugins.js' %}"></script>
+        <!-- Data Table JS
+            ============================================ -->
+        <script src="{% static 'jss/data-table/jquery.dataTables.min.js' %}"></script>
+        <script src="{% static 'jss/data-table/data-table-act.js' %}"></script>
+        <!-- main JS
+            ============================================ -->
+        <script src="{% static 'jss/main.js' %}"></script>
+        
 {% endblock userlist %}
+
