product variant updation and addition done

--- a/category/templates/update_product.html
+++ b/category/templates/update_product.html
@@ -64,7 +64,7 @@
         
                                
                                 <!-- <img src="{{cat.cat_img.url}}" alt="current image"> -->
-                                <input value="{{context.image1}}" type="file" name="image1" accept="image/*" required>
+                                <input value="{{context.image1}}" type="file" name="image1" accept="image/*">
                                 <input value="{{context.image2}}" type="file" name="image2" accept="image/*">
                                 <input value="{{context.image3}}" type="file" name="image3" accept="image/*">
                             </div>
