--- a/category/templates/product_variant.html
+++ b/category/templates/product_variant.html
@@ -60,6 +60,14 @@
     <script src="{% static 'js/vendor/modernizr-2.8.3.min.js' %}"></script>
 {% endblock extra_link %}
 {% block userlist %}
+{% if messages %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    {% for message in messages%}
+    <strong>SUCCESS:</strong> {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  {% endfor %}
+</div>
+{% endif %}
  <!-- Invoice area Start-->
  <div class="invoice-area">
     <div class="container">
@@ -94,6 +102,11 @@
                                 <span>SUBCATEGORY</span>
                                 <h2>{{product.subcat_id.sub_name}}</h2>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row m-5 justify-content-center">
+                        <div class="col-lg-5">
+                            <a href="{% url 'adminapp:add_product_variant' product.id %}" class="btn btn-lg notika-btn-orange">Add New Variant</a>      
                         </div>
                     </div>
                     <div class="row">
@@ -139,6 +152,7 @@
                             </div>
                         </div>
                     </div>
+                 
                     <!-- <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="invoice-ds-int">
